--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,18 @@
+* { padding: 0; margin: 0; box-sizing: border-box; }
+
+
+:root {
+  --baseColor: white;
+  --baseColorL: #0f0f0f;
+  --baseColorSL: #161616;
+  --baseColorD: #010008;
+  --primaryColor: #e8291c;  
+  --whiteColor: #FFF;
+  --textColor: black;
+}
+
+html,body,#root { width: 100%; height: 100%; }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -5,6 +20,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 1.0rem; color: var(--textColor); background-color: var(--baseColor);
 }
 
 code {
